# payment-api-service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: aeb3f359daf0_create_payments_table.py
app/: main.py
app/api/v1/: __init__.py
app/api/v1/routes/: crypto.py  paypal.py  stripe.py
app/core/: config.py
app/models/: payment.py
app/schemas/: payment.py
app/services/: crypto_service.py  paypal_service.py  stripe_service.py
tests/: test_crypto.py  test_paypal.py  test_stripe.py
