[project]
name = "payment-api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "coinbase-commerce>=1.0.1",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "pgsql>=2.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "python-environ>=0.4.54",
    "sqlalchemy>=2.0.41",
    "stripe>=12.2.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
